Added cygxml2-2.dll to Cygwin installs
git-svn-id: https://subversion.xor.aps.anl.gov/synApps/areaDetector/trunk@11861 dc6c5ff5-0b8b-c028-a01f-ffb33f00fc8b

--- a/ADApp/magickSupport/Makefile
+++ b/ADApp/magickSupport/Makefile
@@ -39,6 +39,7 @@ ifeq ($(T_A), cygwin-x86)
 LIB_INSTALLS_cygwin32 += ../os/cygwin32/libGraphicsMagick++.lib ../os/cygwin32/libGraphicsMagickWand.lib ../os/cygwin32/libGraphicsMagick.lib
 LIB_INSTALLS_cygwin32 += ../os/cygwin32/liblcms.lib ../os/cygwin32/libpng14.lib ../os/cygwin32/libbz2.lib ../os/cygwin32/libfreetype.lib
 LIB_INSTALLS_cygwin32 += ../os/cygwin32/libjbig.lib ../os/cygwin32/libxml2.dll.lib
+BIN_INSTALLS_cygwin32 += ../os/cygwin32/cygxml2-2.dll
 endif
 ifeq ($(T_A), linux-x86)
 LIB_INSTALLS_Linux += ../os/linux-x86/libGraphicsMagick++.a ../os/linux-x86/libGraphicsMagickWand.a ../os/linux-x86/libGraphicsMagick.a
