Added files for windows-x64
git-svn-id: https://subversion.xor.aps.anl.gov/synApps/areaDetector/trunk@12844 dc6c5ff5-0b8b-c028-a01f-ffb33f00fc8b

--- a/ADApp/magickSupport/Makefile
+++ b/ADApp/magickSupport/Makefile
@@ -13,6 +13,7 @@ INC += Magick++.h
 INC += $(foreach dir, Magick++ magick wand, \
      $(subst ../,,$(wildcard ../$(dir)/*.h)) )
 
+ifeq ($(T_A),win32-x86)
 LIB_INSTALLS_WIN32    += ../os/WIN32/CORE_RL_Magick++_.lib
 LIB_INSTALLS_WIN32    += ../os/WIN32/CORE_RL_bzlib_.lib
 LIB_INSTALLS_WIN32    += ../os/WIN32/CORE_RL_coders_.lib
@@ -30,8 +31,27 @@ LIB_INSTALLS_WIN32    += ../os/WIN32/CORE_RL_wand_.lib
 LIB_INSTALLS_WIN32    += ../os/WIN32/CORE_RL_wmf_.lib
 LIB_INSTALLS_WIN32    += ../os/WIN32/CORE_RL_xlib_.lib
 LIB_INSTALLS_WIN32    += ../os/WIN32/CORE_RL_zlib_.lib
-LIB_INSTALLS_WIN32    += ../os/WIN32/X11.lib
-LIB_INSTALLS_WIN32    += ../os/WIN32/Xext.lib
+endif
+
+ifeq ($(T_A),windows-x64)
+LIB_INSTALLS_WIN32    += ../os/WIN32/x64/CORE_RL_Magick++_.lib
+LIB_INSTALLS_WIN32    += ../os/WIN32/x64/CORE_RL_bzlib_.lib
+LIB_INSTALLS_WIN32    += ../os/WIN32/x64/CORE_RL_coders_.lib
+LIB_INSTALLS_WIN32    += ../os/WIN32/x64/CORE_RL_filters_.lib
+LIB_INSTALLS_WIN32    += ../os/WIN32/x64/CORE_RL_jbig_.lib
+LIB_INSTALLS_WIN32    += ../os/WIN32/x64/CORE_RL_jp2_.lib
+LIB_INSTALLS_WIN32    += ../os/WIN32/x64/CORE_RL_jpeg_.lib
+LIB_INSTALLS_WIN32    += ../os/WIN32/x64/CORE_RL_lcms_.lib
+LIB_INSTALLS_WIN32    += ../os/WIN32/x64/CORE_RL_libxml_.lib
+LIB_INSTALLS_WIN32    += ../os/WIN32/x64/CORE_RL_magick_.lib
+LIB_INSTALLS_WIN32    += ../os/WIN32/x64/CORE_RL_png_.lib
+LIB_INSTALLS_WIN32    += ../os/WIN32/x64/CORE_RL_tiff_.lib
+LIB_INSTALLS_WIN32    += ../os/WIN32/x64/CORE_RL_ttf_.lib
+LIB_INSTALLS_WIN32    += ../os/WIN32/x64/CORE_RL_wand_.lib
+LIB_INSTALLS_WIN32    += ../os/WIN32/x64/CORE_RL_wmf_.lib
+LIB_INSTALLS_WIN32    += ../os/WIN32/x64/CORE_RL_xlib_.lib
+LIB_INSTALLS_WIN32    += ../os/WIN32/x64/CORE_RL_zlib_.lib
+endif
 
 LIB_INSTALLS_cygwin32 += ../os/cygwin32/libGraphicsMagick++.lib ../os/cygwin32/libGraphicsMagickWand.lib ../os/cygwin32/libGraphicsMagick.lib
 LIB_INSTALLS_cygwin32 += ../os/cygwin32/liblcms.lib ../os/cygwin32/libpng14.lib ../os/cygwin32/libbz2.lib ../os/cygwin32/libfreetype.lib
