Changes for shared and static on 32-bit and 64-bit Windows
git-svn-id: https://subversion.xor.aps.anl.gov/synApps/areaDetector/trunk@16799 dc6c5ff5-0b8b-c028-a01f-ffb33f00fc8b

--- a/ADApp/hdf5Support/Makefile
+++ b/ADApp/hdf5Support/Makefile
@@ -60,8 +60,15 @@ INC_solaris  += H5pubconf.h
 INC_Darwin   += H5pubconf.h
 
 ifeq (win32-x86, $(findstring win32-x86, $(T_A)))
-HDF5_LIBS = $(addprefix ../os/win32-x86/, hdf5.lib libszip.lib zlib.lib)
-LIB_INSTALLS_WIN32   +=  $(HDF5_LIBS)
+  ifeq ($(STATIC_BUILD), NO)
+    HDF5_LIBS = $(addprefix ../os/win32-x86-shared/, hdf5dll.lib szip.lib zlib1.lib)
+    HDF5_BINS = $(addprefix ../os/win32-x86-shared/, hdf5dll.dll szip.dll zlib1.dll)
+    LIB_INSTALLS_WIN32   += $(HDF5_LIBS)
+    BIN_INSTALLS_WIN32   += $(HDF5_BINS)
+  else
+    HDF5_LIBS = $(addprefix ../os/win32-x86-static/, hdf5.lib libszip.lib zlib.lib)
+    LIB_INSTALLS_WIN32   += $(HDF5_LIBS)
+  endif
 
 else ifeq (windows-x64, $(findstring windows-x64, $(T_A)))
   ifeq ($(STATIC_BUILD), NO)
@@ -70,7 +77,7 @@ else ifeq (windows-x64, $(findstring windows-x64, $(T_A)))
     LIB_INSTALLS_WIN32   += $(HDF5_LIBS)
     BIN_INSTALLS_WIN32   += $(HDF5_BINS)
   else
-    HDF5_LIBS = $(addprefix ../os/windows-x64/, hdf5.lib libszip.lib zlib.lib)
+    HDF5_LIBS = $(addprefix ../os/windows-x64-static/, hdf5.lib libszip.lib zlib.lib)
     LIB_INSTALLS_WIN32   += $(HDF5_LIBS)
   endif
 
