--- a/hdf5Support/Makefile
+++ b/hdf5Support/Makefile
@@ -59,15 +59,11 @@ ifeq (win32-x86, $(findstring win32-x86, $(T_A)))
   endif
 
 else ifeq (windows-x64, $(findstring windows-x64, $(T_A)))
-  ifeq ($(STATIC_BUILD), NO)
     HDF5_LIBS = $(addprefix ../os/windows-x64-shared/, hdf5.lib szip.lib zlib.lib)
     HDF5_BINS = $(addprefix ../os/windows-x64-shared/, hdf5.dll szip.dll zlib.dll)
-    LIB_INSTALLS_WIN32   += $(HDF5_LIBS)
     BIN_INSTALLS_WIN32   += $(HDF5_BINS)
-  else
-    HDF5_LIBS = $(addprefix ../os/windows-x64-static/, libhdf5.lib libszip.lib libzlib.lib)
+    HDF5_LIBS += $(addprefix ../os/windows-x64-static/, libhdf5.lib libszip.lib libzlib.lib)
     LIB_INSTALLS_WIN32   += $(HDF5_LIBS)
-  endif
 endif
 
 #=============================
