--- a/hdf5Support/os/windows-x64-shared/libhdf5.settings
+++ b/hdf5Support/os/windows-x64-shared/libhdf5.settings
@@ -1,68 +1,83 @@
-      SUMMARY OF THE HDF5 CONFIGURATION
-      =================================
+	    SUMMARY OF THE HDF5 CONFIGURATION
+	    =================================
 
 General Information:
 -------------------
-                   HDF5 Version: 1.8.14
-                  Configured on: 
-                  Configured by: Visual Studio 10 Win64
-                 Configure mode: CMAKE 2.8.12.2
-                    Host system: Windows-6.1
+                   HDF5 Version: 1.10.0-patch1
+                  Configured on: 2016-07-05
+                  Configured by: Visual Studio 10 2010 Win64
+                    Host system: Windows-6.1.7601
               Uname information: Windows
                        Byte sex: little-endian
-                      Libraries: 
-             Installation point: D:/users/up45/hdf5-1.8.14/install_shared
+             Installation point: C:/Program Files/HDF5
 
 Compiling Options:
 ------------------
-               Compilation Mode: Release
-                     C Compiler: c:/Program Files (x86)/Microsoft Visual Studio 10.0/VC/bin/x86_amd64/cl.exe
-                         CFLAGS:  /DWIN32 /D_WINDOWS /W3
-                      H5_CFLAGS: 
-                      AM_CFLAGS: 
-                       CPPFLAGS: 
-                    H5_CPPFLAGS: 
-                    AM_CPPFLAGS: 
-               Shared Libraries: YES
-               Static Libraries: NO
+                     Build Mode: RelWithDebInfo
+              Debugging Symbols: 
+                        Asserts: 
+                      Profiling: 
+             Optimization Level: 
+
+Linking Options:
+----------------
+                      Libraries: 
   Statically Linked Executables: OFF
-                        LDFLAGS:  /machine:x64 
+                        LDFLAGS:  /machine:x64
+                     H5_LDFLAGS: 
                      AM_LDFLAGS: 
-                Extra libraries: zlib;szip
+                Extra libraries: zlib-static;szip-static
                        Archiver: 
                          Ranlib: 
-              Debugged Packages: 
-                    API Tracing: OFF
 
 Languages:
 ----------
+                              C: yes
+                     C Compiler: c:/Program Files (x86)/Microsoft Visual Studio 10.0/VC/bin/x86_amd64/cl.exe 16.0.40219.1
+                       CPPFLAGS: 
+                    H5_CPPFLAGS: 
+                    AM_CPPFLAGS: 
+                         CFLAGS:  /DWIN32 /D_WINDOWS /W3
+                      H5_CFLAGS: 
+                      AM_CFLAGS: 
+               Shared C Library: YES
+               Static C Library: YES
+
                         Fortran: OFF
-               Fortran Compiler: 
-          Fortran 2003 Compiler: 
+               Fortran Compiler:  
                   Fortran Flags: 
                H5 Fortran Flags: 
                AM Fortran Flags: 
+         Shared Fortran Library: YES
+         Static Fortran Library: YES
+
                             C++: OFF
-                   C++ Compiler: c:/Program Files (x86)/Microsoft Visual Studio 10.0/VC/bin/x86_amd64/cl.exe
+                   C++ Compiler: c:/Program Files (x86)/Microsoft Visual Studio 10.0/VC/bin/x86_amd64/cl.exe 16.0.40219.1
                       C++ Flags:  /DWIN32 /D_WINDOWS /W3 /GR /EHsc
                    H5 C++ Flags: 
                    AM C++ Flags: 
+             Shared C++ Library: YES
+             Static C++ Library: YES
+
+                            JAVA: OFF
+                   JAVA Compiler:  
 
 Features:
 ---------
                   Parallel HDF5: OFF
-             High Level library: OFF
+             High-level library: OFF
                    Threadsafety: ON
-            Default API Mapping: v18
- With Deprecated Public Symbols: ON
+            Default API mapping: v110
+ With deprecated public symbols: ON
          I/O filters (external):  DEFLATE DECODE ENCODE
-         I/O filters (internal):  SHUFFLE FLETCHER32 NBIT SCALEOFFSET
                             MPE: 
                      Direct VFD: 
                         dmalloc: 
-Clear file buffers before write: ON
+ Packages w/ extra debug output: 
+                    API Tracing: OFF
            Using memory checker: OFF
+Memory allocation sanity checks: OFF
+            Metadata trace file: 
          Function Stack Tracing: OFF
       Strict File Format Checks: OFF
    Optimization Instrumentation: 
-       Large File Support (LFS): 
